# IFEM-cmakerules

./: CMakeLists.txt  install_helper.sh.in
cmake/Modules/: FindGoTools.cmake  FindGoTrivariateModel.cmake  FindPetsc.cmake
debian/: changelog  control  copyright  rules
