PROJECT(libifem-cmakerules)
SET(MODULES_VERSION_MAJOR 1)
SET(MODULES_VERSION_MINOR 0)
SET(MODULES_VERSION_PATCH 2)
SET(MODULES_VERSION ${MODULES_VERSION_MAJOR}.${MODULES_VERSION_MINOR}.${MODULES_VERSION_PATCH})

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# Installation rules
FILE(GLOB MODULES cmake/Modules/*.cmake)
INSTALL(FILES ${MODULES} DESTINATION ${CMAKE_ROOT}/Modules)

# Packaging
EXECUTE_PROCESS(COMMAND lsb_release "-sc" OUTPUT_VARIABLE CODENAME)
STRING(REGEX REPLACE "\n" "" SYSTEM_CODENAME ${CODENAME})
EXECUTE_PROCESS(COMMAND lsb_release "-si" OUTPUT_VARIABLE VENDOR)
STRING(REGEX REPLACE "\n" "" SYSTEM_VENDOR ${VENDOR})

IF (SYSTEM_VENDOR STREQUAL "Ubuntu" OR SYSTEM_VENDOR STREQUAL "Debian")
  SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "all")
  SET(SYSTEM_ARCHITECTURE ${CPACK_DEBIAN_PACKAGE_ARCHITECTURE})
  SET(CPACK_GENERATOR "DEB")
  SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Arne Morten Kvarving <arne.morten.kvarving@sintef.no>")
ENDIF (SYSTEM_VENDOR STREQUAL "Ubuntu" OR SYSTEM_VENDOR STREQUAL "Debian")

SET(CPACK_PACKAGE_NAME "libifem-cmakerules")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "libifem - common CMake rules")
SET(CPACK_PACKAGE_VERSION "${MODULES_VERSION}")
SET(CPACK_PACKAGE_VERSION_MAJOR ${MODULES_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${MODULES_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${MODULES_VERSION_PATCH})
SET(CPACK_PACKAGE_FILE_NAME "libifem-cmakerules_${CPACK_PACKAGE_VERSION}_${SYSTEM_ARCHITECTURE}-${SYSTEM_CODENAME}")

INCLUDE(CPack)

ADD_CUSTOM_TARGET(ubuntu 
                  COMMAND make package
                  COMMAND rm -rf UbuntuDebs
                  COMMAND mkdir -p UbuntuDebs
                  COMMAND mv libifem-cmakerules_${CPACK_PACKAGE_VERSION}_${SYSTEM_ARCHITECTURE}-${SYSTEM_CODENAME}.deb UbuntuDebs
                  COMMAND echo "All done. Packages are in UbuntuDebs/"
                  COMMENT "Generating and fixing up Ubuntu packages" VERBATIM)
