PROJECT(libifem-cmakerules)
SET(MODULES_VERSION_MAJOR 1)
SET(MODULES_VERSION_MINOR 0)
SET(MODULES_VERSION_PATCH 8)
SET(MODULES_VERSION ${MODULES_VERSION_MAJOR}.${MODULES_VERSION_MINOR}.${MODULES_VERSION_PATCH})

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/install_helper.sh.in
               install_helper.sh @ONLY)

# Installation rules
IF (CONFIG_MODE)
  INSTALL(CODE "EXECUTE_PROCESS(COMMAND ${CMAKE_BINARY_DIR}/install_helper.sh ${PROJECT_SOURCE_DIR}/cmake/Modules)")
ELSE(CONFIG_MODE)
  FILE(GLOB MODULES cmake/Modules/*.cmake)
  INSTALL(FILES ${MODULES} DESTINATION ${CMAKE_ROOT}/Modules)
ENDIF(CONFIG_MODE)
